Bound a pick by duration, and let the self-decode test see the bug (#796 round 2)
The fake decoder read its source before creating the target, so it saw the
picked bytes even when the two were one file. It now opens the source, then
the target, then reads, as the real one does. The container cap said it
kept the WAV within the free space; it cannot, since the WAV's size follows
duration, so the decoder now refuses a recording longer than a link may be.
The cap is injectable so its test does not fill a temporary folder.